--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -149,20 +149,19 @@
     "plt.plot(x,psi_i,label=r'$\\Psi_I(x,0)$')\n",
     "plt.plot(x,psi_r,label=r'$\\Psi_R(x,\\Delta t /2)$')\n",
     "plt.legend()\n",
-    "plt.xlabel('x')\n",
+    "plt.xlabel('$x$')\n",
     "plt.show()\n",
     "\n",
-    "\"\"\"ettersom vi har så liten delta_t, kanskje vi kan bruke de psi-ene vi har funnet????\"\"\"\n",
+    "#finding an plotting the probability\n",
     "psi_squared=psi_i**2+psi_r**2 \n",
     "plt.plot(x,psi_squared,label=r'$|\\Psi|^2$')\n",
-    "plt.xlabel('x')\n",
+    "plt.xlabel('$x$')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "\"\"\"testet at den faktisk er normalisert\"\"\"\n",
     "print(\"Check that psi is normalized\",np.sum(psi_squared))\n",
     "print(\"EnergY: \", E)\n",
-    "print(\"Delta x:\", delta_x )\n",
     "print(len(x))"
    ]
   },
@@ -247,7 +246,7 @@
    "outputs": [],
    "source": [
     "v_g=(h_bar*k_0)/m\n",
-    "T= L/(2*v_g)\n",
+    "T= L/(2*v_g) #time of propagation \n",
     "timesteps=int(T/delta_t) #number of steps in the iteration \n",
     "\n",
     "#setting the potensial to be zero \n",
@@ -261,11 +260,13 @@
     "psi_i, psi_r = propagate_psi(psi_i,psi_r,timesteps,V2,delta_x)\n",
     "      \n",
     "#plotting \n",
-    "plt.plot(x,psi_i)\n",
-    "plt.plot(x,psi_r)\n",
+    "plt.title(\"Wave propagated a distance 10\")\n",
+    "plt.plot(x,psi_i,label=r'$\\Psi_I$')\n",
+    "plt.plot(x,psi_r,label=r'$\\Psi_R$')\n",
+    "plt.xlabel(r'$x$')\n",
+    "plt.legend()\n",
     "plt.show()\n",
-    "\n",
-    "\"\"\"Det ser ikke ut som den blir helt 15???\"\"\"\n"
+    "\n"
    ]
   },
   {
@@ -279,8 +280,6 @@
     "#plotting for different values of sigma_x\n",
     "sigma_xs=[0.5,1,2]\n",
     "psi_squared_list=[]\n",
-    "\n",
-    "print(timesteps)\n",
     "\n",
     "for i in range(len(sigma_xs)):\n",
     "    sigmax=sigma_xs[i]\n",
@@ -377,32 +376,20 @@
    "outputs": [],
    "source": [
     "#Setting the values spesific for this problem \n",
-    "E=(h_bar*k_0)**2/(2*m)\n",
     "l=L/50\n",
-    "V_0=E/2\n",
-    "sigma_x=1\n",
+    "V0_3=E/2\n",
+    "\"\"\"Spesifikk eller generell sigma_x\"\"\"\n",
+    "sigma_x=1    \n",
     "\n",
-    "#defining the potential as a function of x\n",
-    "\"\"\"trenger vi ta inn l her?\"\"\"\n",
-    "def V3(x,V_0,l):\n",
-    "    if (L/2-l/2<x) and (L/2+l/2>x):\n",
-    "        return V_0\n",
-    "    else: \n",
-    "        return 0 \n",
     "\n",
     "#defing the potensial as an array\n",
-    "V3_arr= np.zeros(len(x)) #making an array of zeros\n",
-    "for i in range(len(x)):\n",
-    "    V3_arr[i]=V3(i*delta_x,V_0,l) #x=i*delta_x \n",
-    "\n",
-    "plt.plot(x,V3_arr)\n",
-    "plt.show()\n",
+    "V3=potential_barrier(V0_3,l,x)\n",
     "\n",
     "#initial values for psi_i and psi_r: \n",
     "psi_i0=find_psi_im(x,0,sigma_x)\n",
     "psi_r0=find_psi_re(x,delta_t/2,sigma_x)\n",
     "\n",
-    "psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V3_arr,delta_x)\n",
+    "psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V3,delta_x)\n",
     "\n",
     "#plotting\n",
     "plt.plot(x,psi_i)\n",
@@ -441,7 +428,7 @@
    "source": [
     "\"Making a list of 50 different values of V0\"\n",
     "V0_list=np.linspace(0,(3*E)/2,50)\n",
-    "PtV0  = np.zeros(len(V0_list))  #list to fill in transmision probabilities \n",
+    "PtV0  = np.zeros(len(V0_list))  #list to fill in transmision probabilities for varying V0\n",
     "\n",
     "for i in range(len(V0_list)):\n",
     "    V4=potential_barrier(V0_list[i],l,x)\n",
@@ -461,19 +448,21 @@
     "plt.vlines(1,0,1,linestyles=\"dotted\",color=\"red\")\n",
     "plt.hlines(0,1,1.5,linestyles=\"dotted\",color=\"red\")\n",
     "plt.legend()\n",
-    "plt.ylabel(r'V_0/E')\n",
+    "plt.ylabel(r'$V_0/E$')\n",
+    "plt-xlabel(r'$x$')\n",
     "plt.show()\n",
     "\n",
     "\n",
     "\n",
     "PrV0=1-PtV0\n",
-    "plt.tilte('Propability of reflection')\n",
+    "plt.title('Propability of reflection')\n",
     "plt.plot(V0_list/E, PrV0,label='quantum')\n",
     "plt.hlines(0,0,1,linestyles=\"dotted\",color=\"red\",label='classical')\n",
     "plt.vlines(1,0,1,linestyles=\"dotted\",color=\"red\")\n",
     "plt.hlines(1,1,1.5,linestyles=\"dotted\",color=\"red\")\n",
     "plt.legend()\n",
-    "plt.ylabel(r'V_0/E')\n",
+    "plt.ylabel(r'$V_0/E$')\n",
+    "plt.xlabel(r'$x$')\n",
     "plt.show()\n"
    ]
   },
