færre tidssteg på oppg 2 + Pr og Pt

--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -22,8 +22,12 @@
     "# TO DO\n",
     "- skjønner ikke helt hva som skjer med Psi_R når den når kanten av området i oppgave 2. Hvorfor er den større enn Psi_I?? Det ser jo ikke helt riktig ut???\n",
     "- KRISTINE, på oppgave 2 står det at det mangler plot for propagated, men skjønner ikke hvilket plot du mener mangler.\n",
-    "- På oppgave 2 under testing av ulike $\\Delta t$ står det \"Propagate the wave function a few timesteps, and plot the results.\" Kanskje vi kan propagere litt kortere :) Vil du se på dette Kristine??\n",
+    "- På oppgave 2 under testing av ulike $\\Delta t$ står det \"Propagate the wave function a few timesteps, and plot the results.\" Jeg brukte færre timesteps og gjorde litt om på valg av verdier deretter. Se gjerne over at det ser greit ut.\n",
     "- Prøvde å skrive på oppgave 5, er du enig med det jeg skrev?\n",
+    "- sigma_x sto definert på nytt i oppgave 3 (definert som sigma_x=1), var det noen grunn til det? Kan den ikke bare være det samme s om tidligere??\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "- bestemme hvilke verdier vi vil ha med for delta_t i oppgave 2. \n",
@@ -359,7 +363,7 @@
    "source": [
     "As mentioned we want $\\Delta t \\ll  \\frac{\\hbar}{\\frac{\\hbar}{2m}\\frac{1}{(\\Delta x)^2}+V_{max}}\\approx 0.0008$ to get a stable numerical propagation. \n",
     "\n",
-    "The plots below show that the numerical computation is stable for delta_t smaller than 0.0004. For delta_t larger than this value the wave function diverges. This value is somewhat in agreement with the theory because it is smaller than 0.0008, but it is not a lot smaller. In the next problems we are also introducing a potential barrier so we don't want $\\Delta t$ to be close to a value which makes the propagation diverge. Based on that we chose $\\Delta t$ to be $10^{-5}$ for use in the following problems.  "
+    "The plots below show that the numerical computation is stable for delta_t smaller than 0.0004. For delta_t larger than this value the wave function diverges. This value is somewhat in agreement with the theory because it is smaller than 0.0008, but it is not a lot smaller. In the next problems we are also introducing a potential barrier so we don't want $\\Delta t$ to be close to a value which makes the propagation diverge. Based on that we chose $\\Delta t$ to be $10^{-5}$ in the following problems.  "
    ]
   },
   {
@@ -372,19 +376,23 @@
    "source": [
     "\"\"\"Stability test of delta_t\"\"\"\n",
     "print(h_bar/((h_bar**2/(2*m))*(1/delta_x**2)+0))\n",
-    "#HVILKE VERDIER VIL VI HA MED HER OG HVOR MANGE??\n",
+    "timesteps_deltaT_test=100\n",
     "\n",
     "#Making list of values for delta_t \n",
-    "list_of_delta_ts=[1e-6,0.00001,0.0001,0.0004,0.00040081,0.000401]\n",
+    "list_of_delta_ts=[1e-6,0.00001,0.0001,0.0004,0.0004014,0.000402]\n",
     "\n",
     "for i in range(len(list_of_delta_ts)):\n",
     "    deltat=list_of_delta_ts[i] \n",
-    "    tsteps=int(T/deltat) #propagation for the same total time for all values of delta_t\n",
+    "    \n",
+    "    \n",
+    "    #tsteps=int(T/deltat) #propagation for the same total time for all values of delta_t\n",
+    "    \n",
+    "    \n",
     "    #Initial values\n",
     "    psi_i=find_psi_im(x,0,sigma_x)\n",
     "    psi_r=find_psi_re(x,deltat/2,sigma_x)\n",
     "    #propagation\n",
-    "    psi_i,psi_r = propagate_psi(psi_i,psi_r,tsteps,V2,delta_x,deltat)\n",
+    "    psi_i,psi_r = propagate_psi(psi_i,psi_r,timesteps_deltaT_test,V2,delta_x,deltat)\n",
     "    #plotting\n",
     "    plt.title(\"$\\Delta t=$\"+str(deltat))\n",
     "    plt.xlabel('x')\n",
@@ -413,12 +421,13 @@
     "    return V0*np.heaviside(x-L/2+l/2,0)*np.heaviside(L/2+l/2-x,0)\n",
     "\n",
     "#Function to caclulate transmission probability\n",
-    "#transmision probability = the integrated propability density from x= 10 to x= 20\n",
-    "def find_transmission_probability(psi_i,psi_r,Nx): \n",
+    "#transmision probability = the integrated probability density from x= 10 to x= 20\n",
+    "def find_trans_refl_prob(psi_i,psi_r,Nx): \n",
     "    psi_absqrd=psi_i**2+psi_r**2\n",
     "    num_of_points_before_barrier=int(Nx/2)\n",
     "    Pt=np.sum(psi_absqrd[num_of_points_before_barrier:]) \n",
-    "    return Pt\n"
+    "    Pr=np.sum(psi_absqrd[:num_of_points_before_barrier])\n",
+    "    return Pt,Pr\n"
    ]
   },
   {
@@ -439,8 +448,6 @@
     "#Defining the values specific for this problem \n",
     "l=L/50\n",
     "V0_3=E/2\n",
-    "\"\"\"Spesifikk eller generell sigma_x\"\"\"\n",
-    "sigma_x=1    \n",
     "\n",
     "#defing the potensial as an array\n",
     "V3=potential_barrier(V0_3,l,x)\n",
@@ -448,8 +455,8 @@
     "#initial values for psi_i and psi_r: \n",
     "psi_i0=find_psi_im(x,0,sigma_x)\n",
     "psi_r0=find_psi_re(x,delta_t/2,sigma_x)\n",
-    "#propagating:\n",
     "\n",
+    "#propagating:\n",
     "psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V3,delta_x,delta_t)\n",
     "\n",
     "#plotting the propagated wave packet\n",
@@ -469,8 +476,9 @@
     "plt.show()\n",
     "\n",
     "#caclulating the transmission and reflection probability\n",
-    "T=find_transmission_probability(psi_i,psi_r,Nx)  #Probability for transmision\n",
-    "print(\"Transmision probability: \",T)\n"
+    "Pt,Pr=find_trans_refl_prob(psi_i,psi_r,Nx)  #Probability for transmision\n",
+    "print(\"Transmision probability: \",Pt, \"\\nReflection probability: \",Pr)\n",
+    "print(\"Total probability: \",Pt+Pr) #Should be equal to 1\n"
    ]
   },
   {
@@ -492,6 +500,7 @@
     "\n",
     "V0_list=np.linspace(0,(3*E)/2,50)#List of 50 different values of V0\n",
     "PtV0  = np.zeros(len(V0_list))  #list to fill in transmission probabilities \n",
+    "PrV0  = np.zeros(len(V0_list))  #list to fill in reflection probabilities \n",
     "\n",
     "for i in range(len(V0_list)):\n",
     "    V4=potential_barrier(V0_list[i],l,x)\n",
@@ -502,10 +511,10 @@
     "    \n",
     "    psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V4,delta_x,delta_t)\n",
     "    \n",
-    "    PtV0[i]=find_transmission_probability(psi_i,psi_r,Nx)\n",
+    "    PtV0[i], PrV0[i] =find_trans_refl_prob(psi_i,psi_r,Nx)\n",
     "\n",
     "#plotting transmission probability as a function of potenial barrier height\n",
-    "plt.title('Propability of transmission')\n",
+    "plt.title('Probability of transmission')\n",
     "#quantum\n",
     "plt.plot(V0_list/E, PtV0,label='quantum')\n",
     "#classical\n",
@@ -517,9 +526,6 @@
     "plt.xlabel(r'$V_0/E$')\n",
     "plt.ylabel('$T$')\n",
     "plt.show()\n",
-    "\n",
-    "#Reflection probability\n",
-    "PrV0=1-PtV0  \n",
     "\n",
     "#plotting reflection probability as a function of potenial barrier height\n",
     "plt.title('Probability of reflection')\n",
@@ -565,9 +571,10 @@
     "\n",
     "#Making a list of 50 different values of l from l=0 to l=L/20\n",
     "L_list=np.linspace(0,L/20,50)\n",
-    "PtL=np.zeros(len(L_list))\n",
+    "PtL=np.zeros(len(L_list)) #list to fill in transmission probabilites \n",
+    "PrL=np.zeros(len(L_list)) #list to fill in reflection probabilites\n",
     "\n",
-    "#Find transmission propability for all l in L_list \n",
+    "#Find transmission probability for all l in L_list \n",
     "for i in range(len(L_list)):\n",
     "    psi_i5=find_psi_im(x5,0,sigma_x)\n",
     "    psi_r5=find_psi_re(x5,delta_t/2,sigma_x)\n",
@@ -575,16 +582,23 @@
     "    \n",
     "    psi_i5, psi_r5 = propagate_psi(psi_i5,psi_r5,timesteps,V5,delta_x5,delta_t)\n",
     "     \n",
-    "    PtL[i] = find_transmission_probability(psi_i5,psi_r5,Nx5)  \n",
+    "    PtL[i], PrL[i] = find_trans_refl_prob(psi_i5,psi_r5,Nx5)  \n",
     "    \n",
-    "PrL=1-PtL\n",
-    "plt.title('Transmission and reflection propability as a function av barrier width')\n",
+    "\n",
+    "plt.title('Transmission and reflection probability as a function av barrier width')\n",
     "plt.plot(L_list,PtL,label='$T(l)$')\n",
     "plt.plot(L_list,PrL,label='$R(l)$')\n",
     "plt.xlabel('$l$, potential barrier width')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
